--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -13,7 +13,8 @@
        {rel, "start_clean", "",
         [
          kernel,
-         stdlib
+         stdlib,
+         mnesia
         ]},
        {boot_rel, "mynode"},
        {profile, embedded},
@@ -25,6 +26,7 @@
        {app, sasl,   [{incl_cond, include}]},
        {app, stdlib, [{incl_cond, include}]},
        {app, kernel, [{incl_cond, include}]},
+       {app, mnesia, [{incl_cond, include}]},
        {app, chatter, [{incl_cond, include}]}
       ]}.
 
